# SneakyBot

./: .gitignore  README.md  bot.py  pyproject.toml
docs/: 配置项.md
sneaky/: __init__.py  config.py  utils.py
sneaky/fuctions/: at.py  flash_img.py  recall.py
